force-app/main/default/objects/Channel__c.object
<CustomObject>
    <description>Communication Channels</description>
    <fields>
        <fullName>AU_Post_Code__c</fullName>
        <description>AU Post Code for Source System</description>
        <label>AU Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Key__c</fullName>
        <description>Used for contact point creation</description>
        <formula>Street__c +  City__c + State__c +  TEXT(Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Link__c</fullName>
        <description>Alternative to the auto number field for listviews</description>
        <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id + &quot;/view&quot;, Name &amp; CHR(160) &amp; IF( Deleted_In_Source__c,&quot;[Pending Delete]&quot;+CHR(160),&quot;&quot;) &amp; IF(ISBLANK(Person_ID__c),IF(ISBLANK(Contact__r.Person_ID__c),&quot;&quot;,Contact__r.Person_ID__c &amp; &quot;/&quot;), Person_ID__c &amp; &quot;/&quot;) &amp; TEXT(Type__c) &amp; CASE(TEXT(Type__c), &quot;EMERCONT&quot;, &quot;/&quot; &amp; UPPER(Relationship__c),&quot;&quot;),&quot;_self&quot;)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Channels</relationshipLabel>
        <relationshipName>Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deleted_In_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record has been deleted in the source system.</description>
        <inlineHelpText>Record has been deleted in the source system.</inlineHelpText>
        <label>Deleted In Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Unverified__c</fullName>
        <description>Email address exactly as supplied by source system without verifying as a correctly formed email address.</description>
        <inlineHelpText>Email address exactly as supplied by source system without verifying as a correctly formed email address.</inlineHelpText>
        <label>Email Unverified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fullname__c</fullName>
        <description>Emergency Contact name field</description>
        <label>Fullname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System Field - indicates that the record was processed into Contact Point records</description>
        <inlineHelpText>System Field - indicates that the record was processed into Contact Point records</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_API__c</fullName>
        <label>Last Modified By API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_API__c</fullName>
        <description>Last Modified Date Time from Source System</description>
        <label>Last Modified Date API</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_1__c</fullName>
        <description>Address Line 1</description>
        <inlineHelpText>Address Line 1</inlineHelpText>
        <label>Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_2__c</fullName>
        <description>Address Line 2 from Source System.</description>
        <inlineHelpText>Address Line 2</inlineHelpText>
        <label>Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_3__c</fullName>
        <description>Address Line 3 from Source System.</description>
        <label>Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OS_Post_Code__c</fullName>
        <description>Overseas address post code of a person.</description>
        <label>OS Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>Callista Person ID</description>
        <label>Person ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Archive Status</description>
        <label>Ready to Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Unverified__c</fullName>
        <description>Callista relationship data prior to any transformation</description>
        <inlineHelpText>Callista relationship data prior to any transformation</inlineHelpText>
        <label>Relationship Unverified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>The transformed emergency contact relationship value</description>
        <inlineHelpText>Standardised relationship</inlineHelpText>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <description>Role Type</description>
        <formula>text(Role__r.Role__c)</formula>
        <label>Role Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Role to which the Channel belongs</description>
        <label>Role</label>
        <referenceTo>Roles__c</referenceTo>
        <relationshipLabel>Channels</relationshipLabel>
        <relationshipName>Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System of the record.</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Channel (which maps to Callista Address Type)
it supports Callista types + the &quot;MAILING&quot; type (which is used by the Lead Management).</description>
        <inlineHelpText>Type of Channel - CRM Users are not expected to select Callista values</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HOME</fullName>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>MAILING</fullName>
                    <label>Mailing</label>
                </value>
                <value>
                    <fullName>POSTAL</fullName>
                    <label>Postal</label>
                </value>
                <value>
                    <fullName>POSTAL-EXT</fullName>
                    <label>Postal Extended</label>
                </value>
                <value>
                    <fullName>OS-POSTAL</fullName>
                    <label>Overseas Postal</label>
                </value>
                <value>
                    <fullName>OS-HOME</fullName>
                    <label>Overseas Home</label>
                </value>
                <value>
                    <fullName>AP-EMAIL</fullName>
                    <label>Application Email</label>
                </value>
                <value>
                    <fullName>GRADUATION-APPL</fullName>
                    <label>Graduation Email</label>
                </value>
                <value>
                    <fullName>EMERCONT</fullName>
                    <label>Emergency Contact</label>
                </value>
                <value>
                    <fullName>BILLING</fullName>
                    <isActive>false</isActive>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>BUSINESS</fullName>
                    <isActive>false</isActive>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>DEFAULT</fullName>
                    <isActive>false</isActive>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>LEGAL</fullName>
                    <isActive>false</isActive>
                    <label>Legal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>Use in the event handler trigger for mapping</description>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <description>Defines whether this Channel is considered as active based on defined attributes</description>
        <formula>IF(
	AND(
		NOT(Deleted_In_Source__c),
		Start_Date__c &lt;= TODAY(), 
		OR(
			End_Date__c &gt; TODAY(),
			ISNULL(End_Date__c)
		)
	),
TRUE,
FALSE)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Channel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Channel_Link__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Address_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Processed</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Processed</label>
    </listViews>
    <listViews>
        <fullName>Domestic</fullName>
        <columns>Channel_Link__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Address_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>POSTAL,POSTAL-EXT,HOME</value>
        </filters>
        <label>Domestic</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Only</fullName>
        <columns>Channel_Link__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Address_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AP-EMAIL,GRADUATION-APPL,MAILING</value>
        </filters>
        <label>Email Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Emergency_Contacts</fullName>
        <columns>Channel_Link__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>Relationship__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Address_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>EMERCONT</value>
        </filters>
        <label>Emergency Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Modified_this_Week</fullName>
        <columns>Channel_Link__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Address_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Modified this Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Overseas</fullName>
        <columns>Channel_Link__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Address_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>OS-POSTAL,OS-HOME</value>
        </filters>
        <label>Overseas</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unprocessed</label>
    </listViews>
    <nameField>
        <displayFormat>CK-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>